classDiagram
    direction LR

    %% Entry point and lifetime orchestration.
    class MainLoop {
        <<entrypoint>>
        +main()
    }

    %% SDL platform/window layer.
    class SDLWindow {
        +SDL_Window* Window
        +float MainScale
        +bool Init(title, width, height)
        +vector~const char*~ GetVulkanExtensions()
        +VkSurfaceKHR CreateVulkanSurface(instance, allocator)
        +void GetSize(w, h)
        +void Show()
        +bool IsMinimized()
        +void PollEvents(done, imgui)
        +void Shutdown()
    }

    %% Vulkan resource and frame submission layer.
    class VulkanContext {
        +VkInstance Instance
        +VkPhysicalDevice PhysicalDevice
        +VkDevice Device
        +VkQueue Queue
        +ImGui_ImplVulkanH_Window MainWindowData
        +void Setup(instance_extensions)
        +void SetupWindow(surface, width, height)
        +ImGui_ImplVulkan_InitInfo MakeInitInfo()
        +void RebuildSwapchainIfNeeded(width, height)
        +void SetClearColor(color)
        +void FrameRender(draw_data)
        +void FramePresent()
        +void WaitIdle()
        +void CleanupWindow()
        +void Cleanup()
    }

    %% Application-facing UI orchestration layer.
    class ImGuiLayer {
        +bool ShowDemoWindow
        +bool ShowAnotherWindow
        +bool ShowDebugLogMirrorWindow
        +bool ShowTerminalWindow
        +bool ShowTestEngineWindow
        +bool RequestQuit
        +ImVec4 ClearColor
        +ImGuiDebugLogMirror DebugLogMirror
        +vector~TerminalTab~ Terminals
        +void AddTerminal(name)
        +void Init(window, init_info, main_scale)
        +void ProcessEvent(event)
        +void NewFrame()
        +void BuildUI()
        +void Render()
        -void WireTerminalCallbacks(c)
        -void DrawTerminals()
    }

    %% Each terminal tab owns one concrete console instance.
    class TerminalTab {
        +string name
        +unique_ptr~ConsoleCommands~ console
        +bool open
    }

    %% File mirror for Dear ImGui's internal debug log buffer.
    class ImGuiDebugLogMirror {
        +bool Open(path)
        +void Close()
        +bool IsOpen()
        +const char* GetPath()
        +void Tick()
        +void ShowWindow(p_open)
        +ImGuiDebugLogFlags GetFlags()
        +void SetFlags(flags)
    }

    %% Base terminal widget: log, history, completion, and command dispatch.
    class ImGuiConsole {
        +void ClearLog()
        +void AddLog(line)
        +void AddLogThreadSafe(line)
        +void Draw(title, p_open)
        +void DrawContents(id)
        +void RegisterCommand(name, description, fn)
        +void ExecCommand(command_line)
        #vector~string~ Items
        #vector~ConsoleCommandDef~ Commands
        #vector~string~ History
        -vector~string~ PendingLines_
        -shared_ptr~BashSession~ ActiveBashSession_
    }

    %% Concrete console with built-in commands for this example app.
    class ConsoleCommands {
        +function~void()~ OnQuit
        +function~void(bool)~ OnDemoToggle
        +function~void(int)~ OnStyleChange
    }

    %% Command parsing and registry records.
    class ConsoleCommandArgs {
        +string_view name
        +vector~string~ args
        +string_view raw_args
    }

    class ConsoleCommandDef {
        +string name
        +string description
        +ConsoleCommandFn fn
    }

    %% Opaque PTY session state used by BASH/TERMINAL commands.
    class BashSession {
        <<internal>>
    }

    %% Optional test-runner integration layer.
    class TestEngineLayer {
        +ImGuiTestEngine* Engine
        +void Init()
        +void Stop()
        +void Shutdown()
        +void PostSwap()
        +void BuildUI(p_open)
        -void RegisterTests()
    }

    %% External systems are shown but not expanded.
    class DearImGuiCore {
        <<external>>
    }

    class ImGuiSDL3Backend {
        <<external>>
    }

    class ImGuiVulkanBackend {
        <<external>>
    }

    class ImGuiTestEngineExternal {
        <<external>>
    }

    MainLoop *-- SDLWindow : owns
    MainLoop *-- VulkanContext : owns
    MainLoop *-- ImGuiLayer : owns
    MainLoop *-- TestEngineLayer : owns

    SDLWindow ..> ImGuiLayer : forwards SDL events
    SDLWindow ..> VulkanContext : creates Vulkan surface for
    VulkanContext ..> ImGuiLayer : provides renderer init info to

    ImGuiLayer *-- ImGuiDebugLogMirror : owns
    ImGuiLayer *-- TerminalTab : stores tabs
    TerminalTab *-- ConsoleCommands : owns

    ConsoleCommands --|> ImGuiConsole : extends
    ImGuiConsole o-- ConsoleCommandDef : registry of
    ConsoleCommandDef ..> ConsoleCommandArgs : consumes
    ImGuiConsole o-- BashSession : tracks active

    ImGuiLayer ..> DearImGuiCore : manages context for
    ImGuiLayer ..> ImGuiSDL3Backend : initializes
    ImGuiLayer ..> ImGuiVulkanBackend : initializes
    VulkanContext ..> ImGuiVulkanBackend : supplies init data to
    TestEngineLayer ..> ImGuiTestEngineExternal : wraps lifecycle of
